src/main/java/application/dataset/test/invalidRandomAddresses/todo/easy/RandomAddressesWithoutTwoFields.java
package application.dataset.test.invalidRandomAddresses.todo.easy;

public class RandomAddressesWithoutTwoFields {
}
